@@ -2109,12 +2109,20 @@ listindex(PyListObject *self, PyObject *args)
 {
     Py_ssize_t i, start=0, stop=Py_SIZE(self);
     PyObject *v, *format_tuple, *err_string;
+    PyObject *start_obj = NULL, *stop_obj = NULL;
     static PyObject *err_format = NULL;
 
-    if (!PyArg_ParseTuple(args, "O|O&O&:index", &v,
-                                _PyEval_SliceIndex, &start,
-                                _PyEval_SliceIndex, &stop))
+    if (!PyArg_ParseTuple(args, "O|OO:index", &v, &start_obj, &stop_obj))
         return NULL;
+
+    if (start_obj != Py_None)
+        if (!_PyEval_SliceIndex(start_obj, &start))
+            return NULL;
+
+    if (stop_obj != Py_None)
+        if (!_PyEval_SliceIndex(stop_obj, &stop))
+            return NULL;
+
     if (start < 0) {
         start += Py_SIZE(self);
         if (start < 0)
